--- a/cloudFrontEnd/src/app/activemq-credentials/activemq-credentials.component.html
+++ b/cloudFrontEnd/src/app/activemq-credentials/activemq-credentials.component.html
@@ -12,6 +12,7 @@
               (blur)="getFormControl('password').updateValueAndValidity()"
               title=""
               matTooltip="Enter user name or leave blank to leave unchanged"
+              [matTooltipShowDelay]="UtilsService.toolTipDelay"
               matTooltipClass="tooltip"
               placeholder="New User name">
             <mat-hint>User name for NVR online access</mat-hint>
@@ -33,6 +34,7 @@
               (blur)="getFormControl('username').updateValueAndValidity()"
               title=""
               matTooltip="Enter your password or leave blank to leave unchanged"
+              [matTooltipShowDelay]="UtilsService.toolTipDelay"
               matTooltipClass="tooltip"
               placeholder="Password">
             <mat-hint>Password for NVR online access</mat-hint>
@@ -52,6 +54,7 @@
               (beforeinput)="confirmOnReturn($event)"
               title=""
               matTooltip="Confirm your NVR account password"
+              [matTooltipShowDelay]="UtilsService.toolTipDelay"
               matTooltipClass="tooltip"
               placeholder="Confirm Password">
             <mat-hint>Confirm the password</mat-hint>
@@ -66,6 +69,7 @@
               (beforeinput)="confirmOnReturn($event)"
               title=""
               matTooltip="Set to the correct ActiveMQ host address if not already shown"
+              [matTooltipShowDelay]="UtilsService.toolTipDelay"
               matTooltipClass="tooltip"
               placeholder="ActiveMQ Host">
             <mat-hint>ActiveMQ Host Address</mat-hint>
