--- a/cloudFrontEnd/src/app/change-password/change-password.component.html
+++ b/cloudFrontEnd/src/app/change-password/change-password.component.html
@@ -9,6 +9,7 @@
             <input matInput type="password" formControlName="oldPassword" #oldPassword
               placeholder="Enter current password"
               matTooltip="Enter the current password"
+              [matTooltipShowDelay]="UtilsService.toolTipDelay"
               matTooltipClass="tooltip">
             @if (hasError('oldPassword', 'required')) {
               <mat-error>Current password is required</mat-error>
@@ -24,6 +25,7 @@
             <input matInput type="password" formControlName="newPassword" [maxLength]="64"
               placeholder="New password"
               matTooltip="Enter the new password, this must be between 8 and 32 characters in length and can contain alpha, numeric and special characters"
+              [matTooltipShowDelay]="UtilsService.toolTipDelay"
               matTooltipClass="tooltip">
             <mat-label>New Password</mat-label>
             @if (hasError('newPassword', 'required')) {
@@ -41,6 +43,7 @@
             <input matInput type="password" formControlName="confirmNewPassword" #confirmNewPassword
               placeholder="Confirm new password"
               matTooltip="Enter the new password again"
+              [matTooltipShowDelay]="UtilsService.toolTipDelay"
               matTooltipClass="tooltip">
             @if (hasError('confirmNewPassword', 'required')) {
               <mat-error>Confirm new password is required</mat-error>
