--- a/cloudFrontEnd/src/app/reset-password/reset-password.component.html
+++ b/cloudFrontEnd/src/app/reset-password/reset-password.component.html
@@ -13,6 +13,7 @@
           <mat-label>New Password</mat-label>
           <input matInput type="password" [formControl]="getFormControl('newPassword')"
             matTooltip="Enter the new password, this must be between 8 and 32 characters in length and can contain alpha, numeric and special characters"
+            [matTooltipShowDelay]="UtilsService.toolTipDelay"
             matTooltipClass="tooltip"
             placeholder="New password">
           @if (hasError('newPassword', 'required')) {
@@ -32,6 +33,7 @@
           <mat-label>Confirm new password</mat-label>
           <input matInput type="password" [formControl]="getFormControl('confirmNewPassword')"
             matTooltip="Enter the new password again"
+            [matTooltipShowDelay]="UtilsService.toolTipDelay"
             matTooltipClass="tooltip"
             placeholder="Confirm new password">
           @if (hasError('confirmNewPassword', 'required')) {
