--- a/cloudFrontEnd/src/app/user-login/forgotten-password/forgotten-password.component.html
+++ b/cloudFrontEnd/src/app/user-login/forgotten-password/forgotten-password.component.html
@@ -13,6 +13,7 @@
             [formControl]="getFormControl('email')"
             (beforeinput)="confirmOnReturn($event)"
             matTooltip="Enter your email address."
+            [matTooltipShowDelay]="UtilsService.toolTipDelay"
             matTooltipClass="tooltip"
             placeholder="Email address">
           <mat-label>Your email address</mat-label>
@@ -28,6 +29,7 @@
         <span>
           <button color="cancel" mat-raised-button (click)="hideForm()"
             matTooltip="Close this dialogue and return to the login form"
+            [matTooltipShowDelay]="UtilsService.toolTipDelay"
             matTooltipClass="tooltip">
             Cancel
           </button>
@@ -36,6 +38,7 @@
             [disabled]="anyInvalid()"
             (click)="sendLink()"
             matTooltip="Submit the email address to receive a link to reset your password"
+            [matTooltipShowDelay]="UtilsService.toolTipDelay"
             matTooltipClass="tooltip">
             Confirm
           </button>
