--- a/cloudFrontEnd/src/app/config-setup/add-as-onvif-device/add-as-onvif-device.component.html
+++ b/cloudFrontEnd/src/app/config-setup/add-as-onvif-device/add-as-onvif-device.component.html
@@ -7,6 +7,7 @@
         <input matInput type="text" autocomplete="off" maxlength="60"
           [formControl]="getFormControl('onvifUrl')"
           matTooltip="Enter the URL for the Onvif device."
+          [matTooltipShowDelay]="UtilsService.toolTipDelay"
           matTooltipClass="tooltip"
           placeholder="Onvif URL"
           (blur)="updateField()">
@@ -29,6 +30,7 @@
       <span class="add-camera-confirm-group">
         <button color="cancel" mat-raised-button (click)="hideAddCameraDialogue()"
           matTooltip="Close this dialogue and don't look up camera details"
+          [matTooltipShowDelay]="UtilsService.toolTipDelay"
           matTooltipClass="tooltip">
           Cancel
         </button>
@@ -36,6 +38,7 @@
           [disabled]="anyInvalid()"
           (click)="startCapabilitiesDiscovery()"
           matTooltip="Try to find the camera details for the given Onvif URL"
+          [matTooltipShowDelay]="UtilsService.toolTipDelay"
           matTooltipClass="tooltip">
           Confirm
         </button>
