--- a/cloudFrontEnd/src/app/live-container/ptzcontrols/ptzbutton/ptzbutton.component.html
+++ b/cloudFrontEnd/src/app/live-container/ptzcontrols/ptzbutton/ptzbutton.component.html
@@ -1,5 +1,6 @@
 <div [matTooltip]="isGuest ? 'Disabled for guest' : ptzBtnMatTooltip"
-              matTooltipClass="tooltip">
+     [matTooltipShowDelay]="UtilsService.toolTipDelay"
+     matTooltipClass="tooltip">
   <button mat-icon-button (mousedown)="move()" (touchstart)="move()" (mouseup)="stop()" (touchend)="stop()"
           [disabled]="isGuest">
     <mat-icon [style.transform]="'scale('+scale+')'">{{matIcon}}</mat-icon>
