--- a/cloudFrontEnd/src/app/setup-smtpclient/setup-smtpclient.component.html
+++ b/cloudFrontEnd/src/app/setup-smtpclient/setup-smtpclient.component.html
@@ -8,6 +8,7 @@
           <mat-checkbox (change)="updateAuthState($event)" [checked]="smtpData.auth"
             [formControl]="getFormControl('auth')"
             matTooltip="{{smtpData.auth?'Disable':'Enable'}} authentication on the SMTP serve. ({{smtpData.auth?'Assumes no user credentials required':'User credentials must be provided below'}})"
+            [matTooltipShowDelay]="UtilsService.toolTipDelay"
             matTooltipClass="tooltip">
             {{smtpData.auth ? 'Authenticated' : 'Unauthenticated'}}
           </mat-checkbox>
@@ -17,6 +18,7 @@
               (beforeinput)="confirmOnReturn($event)"
               title=""
               matTooltip="Enter SMTP account user name (this may be the account email address)"
+              [matTooltipShowDelay]="UtilsService.toolTipDelay"
               matTooltipClass="tooltip"
               placeholder="SMTP User name">
             <mat-label>User name for the SMTP account</mat-label>
@@ -34,6 +36,7 @@
               (beforeinput)="confirmOnReturn($event)"
               title=""
               matTooltip="Enter SMTP account password"
+              [matTooltipShowDelay]="UtilsService.toolTipDelay"
               matTooltipClass="tooltip"
               placeholder="SMTP Password">
             <mat-label>Password for the SMTP account</mat-label>
@@ -51,6 +54,7 @@
               (beforeinput)="confirmOnReturn($event)"
               title=""
               matTooltip="Confirm SMTP account password"
+              [matTooltipShowDelay]="UtilsService.toolTipDelay"
               matTooltipClass="tooltip"
               placeholder="Confirm SMTP Password">
             <mat-label>Password for the SMTP account</mat-label>
@@ -67,6 +71,7 @@
           <mat-checkbox (change)="updateStartTLSState($event)" [checked]="smtpData.enableStartTLS"
             [formControl]="getFormControl('enableStartTLS')"
             matTooltip="Click to use {{smtpData.enableStartTLS ? 'unencrypted':'TLS encrypted'}} communication with the SMTP server."
+            [matTooltipShowDelay]="UtilsService.toolTipDelay"
             matTooltipClass="tooltip">
             {{!smtpData.enableStartTLS ? 'Plain Text (unencrypted)' : 'TLS Encrypted'}}
           </mat-checkbox>
@@ -74,6 +79,7 @@
             <!--          <mat-label>Infra Red Status</mat-label>-->
             <mat-select [formControl]="getFormControl('sslProtocols')"
               matTooltip="Select the TLS protocol to use"
+              [matTooltipShowDelay]="UtilsService.toolTipDelay"
               matTooltipClass="tooltip">
               <mat-option [value]="'TLSv1.2'">
                 TLSv1.2
