--- a/cloudFrontEnd/src/app/video/video.component.html
+++ b/cloudFrontEnd/src/app/video/video.component.html
@@ -46,7 +46,7 @@
                    [ngClass]="{'audio-latency-correction': mediaFeeder.audioLatencyOverrun}"
                    [matTooltip]="'Click to '+(!showAudioControls ? 'show' : 'hide')+' audio controls, or Ctrl click to ' + (mediaFeeder.isMuted ? 'unmute' : 'mute') + ' sound'"
                    [matTooltipShowDelay]="UtilsService.toolTipDelay"
-                   matTooltipClass="video-buttons-tooltip">
+                   matTooltipClass="tooltip">
               <mat-icon (click)="toggleShowAudioControls()">{{ mediaFeeder.isMuted ? 'volume_off' : 'volume_up' }}
               </mat-icon>
             </label>
@@ -56,7 +56,7 @@
               class="video-buttons"
               [matTooltip]="audioBackchannel.audioButtonTooltip()"
               [matTooltipShowDelay]="UtilsService.toolTipDelay"
-              matTooltipClass="video-buttons-tooltip">
+              matTooltipClass="tooltip">
               <mat-icon
                 [ngClass]="{'audio-out-inactive': !utilsService.speakActive && !audioBackchannel.audioToggle && !utilsService.isGuestAccount, 'audio-out-active':  utilsService.speakActive && audioBackchannel.audioToggle && !utilsService.isGuestAccount, 'audio-out-disabled': (utilsService.speakActive && !audioBackchannel.audioToggle) || utilsService.isGuestAccount}"
                 (click)="audioBackchannel.toggleAudioOut(mediaFeeder.camera, stream)">{{ audioBackchannel.audioToggle ? 'mic' : 'mic_off' }}
@@ -64,7 +64,7 @@
             </label>
             <select [disabled]="utilsService.speakActive"
                     [matTooltip]="audioBackchannel.audioInputSelectorTooltip()"
-                    [matTooltipShowDelay]="UtilsService.toolTipDelay" matTooltipClass="video-buttons-tooltip"
+                    [matTooltipShowDelay]="UtilsService.toolTipDelay" matTooltipClass="tooltip"
                     [(ngModel)]="audioBackchannel.selectedDeviceId" (change)="audioBackchannel.setAudioInput()">
               @for (device of audioBackchannel.mediaDevices | audioInput; track device) {
                 <option [value]="device.deviceId">{{ device.label }}
@@ -78,7 +78,7 @@
           <label class="video-buttons"
                  matTooltip="Set full screen"
                  [matTooltipShowDelay]="UtilsService.toolTipDelay"
-                 matTooltipClass="video-buttons-tooltip">
+                 matTooltipClass="tooltip">
             <mat-icon (click)="setFullScreen()">fullscreen</mat-icon>
           </label>
         </div>
